...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Roboto" />

        <RadioButton
            android:id="@+id/journal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Journal" />

        <RadioButton
            android:id="@+id/lobster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Lobster" />

        <RadioButton
            android:id="@+id/dancing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Dancing Script" />

        <RadioButton
            android:id="@+id/walkway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Walkway" />

        <RadioButton
            android:id="@+id/gooddog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Gooddog" />

    </RadioGroup>



</LinearLayout>
...
